Updated the stylesheet to fix the overflow problem with the sidebar

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -247,6 +247,7 @@ nav.navcus1 a.labelcus:hover{
     height: 100vh;
     background-color: white;
     padding-top: 58px !important;
+    overflow-y: auto;
 }
 
 .modulestep .contentarea{
@@ -383,6 +384,19 @@ a:link, a:visited, a:hover, a:active{
 
 .visiblecus{
     display: flex !important;
+}
+
+#feedbackarea .alert{
+    padding: 5px;
+    margin-bottom: 55px;
+}
+
+#hintarea .alert{
+    margin-bottom: 0px;
+}
+
+.alert ul{
+    margin-bottom: 5px;
 }
 
 /* UI Components hidden for the purposes of animating CSS display property */
